test/conformance/chainsaw/mutating-policies/existing/different-trigger-target/test-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-mpol-different-trigger-target-ns 
  labels:
    test: "enabled"
