test/conformance/chainsaw/mutating-policies/existing/different-trigger-target/configmaps-assert.yaml
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: test-cm-1
  namespace: test-mpol-different-trigger-target-ns 
  labels:
    foo: bar
data:
  key1: value1
