test/conformance/chainsaw/mutating-policies/existing/different-trigger-target/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: MutatingPolicy
metadata:
  name: test-mpol-different-trigger-target
status:
  conditionStatus:
    conditions:
    - message: Webhook configured.
      reason: Succeeded
      status: "True"
      type: WebhookConfigured
    - message: Policy is ready for reporting.
      reason: Succeeded
      status: "True"
      type: RBACPermissionsGranted
    ready: true
